@@ -1,7 +1,9 @@
 ## Process this file with automake to produce Makefile.in
 
 bopgen_script_name = bash_optparse_generate_script
+boptempl_script_name = bash_optparse_template
 
 bin_SCRIPTS = \
-	$(bopgen_script_name)
+	$(bopgen_script_name) \
+	$(boptempl_script_name)
 
