@@ -8,6 +8,7 @@ What's new in version 2.0
    accepted in the command line for those options).
    Note: this slightly breaks backwards-compatibility (thus the version bump).
 *) Added bash completion facility for any script which uses bash_optparse.
+*) Added utility for template generation
 
 What's new in version 1.1
 -------------------------
